Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109303

Android: single updates for PositionSource and SatelliteSource take too long

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 6.2.8, 6.4.3, 6.5.0
    • 6.5.0
    • Positioning
    • None
    • Android
    • 8
    • 8f665182d (dev), dd4a8b277 (dev), 213278db0 (dev), 309b648a4 (6.4), 564be6021 (6.5), 8788aeb5d (6.5), 29b5588be (6.5), 44040932d (tqtc/lts-6.2), 8894882a8 (tqtc/lts-6.2), b0061d5f0 (tqtc/lts-6.2), 416e51638 (6.4), ed7713a2a (6.4), 844db521b (dev)
    • Foundation Sprint 73

    Description

      Android positioning plugin acts strangely when it comes to individual updates for both position and satellite info.

      For position info the update always comes after the full specified timeout expires, even if it was received earlier. The implementation makes me think that it's done on purpose, as there is an internal list of received updates, and then the best one is selected from them. But the problem is that default timeout on Android is 2 minutes, which is probably too long for most cases. So I think we can do better.

      As for the satellite updates, it seems that a single satellite update does not come at all...

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              ivan.solovev Ivan Solovev
              ivan.solovev Ivan Solovev
              Vladimir Minenko Vladimir Minenko
              Alex Blasche Alex Blasche
              Votes:
              1 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: