Android: improve position source single update logic

When requesting a single update using the Android plugin, it tries to
request a signle update for all desired positioning methods, waits for
the results until the specified timeout expires, and then provides the
best of the available results.
This does not look like a good solution, because we will get maximum
one update from each specified positioning method.
Considering that the default single update interval is 2 minutes, this
results in needlessly long delay before getting the position update.

This patch calculates the expected maximum amount of incoming position
updates, and stops the timer as soon as this amount of updates is
received.

In practice that does not help in all cases, because the Satellite
update might not be received within the specified interval if the
satellite fix was not received. In such cases the result will still
be reported after the timeout expires.
A possible improvement would be to wait for the first update
(Network or Satellite), and just use it. That's what all other
backends do as well.

Task-number: QTBUG-109303
Change-Id: I65142f90de28a35209a1cef0317aefd10fae859e
Reviewed-by: Juha Vuolle <juha.vuolle@qt.io>
(cherry picked from commit 8f665182d1daf995ef2ea3d9b3a3aa1051ba0fb8)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>